setup backbone for all recipe and about page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     </head>
 
     <body>
-        
+        <h1><strong>HAACHAMA COOKING</strong></h1>
+        <p>A short collection of recipes by Haato Akai. Enjoy yourself! <a href="./about">Confused?</a></p>
+
+
+        <h2>Recipes</h2>
+        <ul>
+            <li><a href="./recipes/bitch-pasta">Bitch pasta</a></li>
+            <li><a href="./recipes/gyoza">Gyoza</a></li>
+            <li><a href=".recipes/pogger-curry">Pogger curry</a></li>
+        </ul>
     </body>
 </html>
