add content to the three existing recipes

--- a/recipes/bitch-pasta.html
+++ b/recipes/bitch-pasta.html
@@ -6,6 +6,32 @@
     </head>
 
     <body>
-        
+        <h1>Description</h1>
+        <p>Despite the name pasta, this dish actually uses Udon as its noodle but the sauce is still tomato sauce so it is pretty much still a pasta anyway. The dish is loaded with delicious ingredients such as sliced beef, gyoza, prawn, and brocolli so I sure hope you are hungry!</p>
+
+        <h1>Ingredients</h1>
+        <ul>
+            <li>Udon noodle</li>
+            <li>Thinly sliced beef</li>
+            <li>Gyoza</li>
+            <li>Frozen Prawn</li>
+            <li>Tomato</li>
+            <li>Brocolli</li>
+            <li><a href="https://wikipedia.org/wiki/Shirataki_noodles">Shirataki</a></li>
+            <li>Tofu</li>
+            <li>Ready-made meat sauce</li>
+        </ul>
+
+        <h1>Steps</h1>
+        <ol>
+            <li>Bring a pot of water to the boil and put in your udon noodle.</li>
+            <li>Into the same pot, put in your beef, gyoza, frozen prawn (you may need to defrost it with a microwave first), brocolli, shirataki, and tofu as well.</li>
+            <li>While waiting, cut your tomato in half.</li>
+            <li>After everything have finished cooking, plate them up with noodle on the bottom. Also include the tomato!</li>
+            <li>Cut open you meat sauce and pour it all over the plate. The more you use, the better.</li>
+            <li>Finally, microwave your dish for 2 minutes and 16 seconds then you are done!</li>
+        </ol>
+        <h3>Video Guide can be found <a href="https://www.youtube.com/watch?v=B5KoNaDvfmc">here</a>.</h3>
+        <p>return to <a href="../index.html">main page</a> for more recipes</p>
     </body>
 </html>
