--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -6,6 +6,27 @@
     </head>
 
     <body>
-        
+        <h1>Description</h1>
+        <p>A simple dish with minimal ingredients but maximal flavor that anyone can cook, you will never eat Gyoza the same way again! Don't bother making your own, frozen gyoza work just fine! If you have never heard of gyoza, <a href="https://wikipedia.org/wiki/Jiaozi#Gyōza">look them up here</a></p>
+
+        <h1>Ingredients</h1>
+        <ul>
+            <li>Gyoza</li>
+            <li>Olive oil</li>
+        </ul>
+
+        <h1>Steps</h1>
+        <ol>
+            <li>
+                Put olive oil and then the frozen gyoza in a large skillet. Defrosting is not needed.
+            </li>
+            <li>Turn up to medium heat. If you are at this step, it is pretty much done!</li>
+            <li>To enhance the flavor, pour in a bit of water from the faucet straight into the pan and place the lid on</li>
+            <li>Open the lid every few minutes and check only the <strong>middle</strong> gyoza.</li>
+            <li>Cook until the gyoza has a nice layer of blackness on the outside. That's flavor right there!</li>
+            <li>Plate up your dish and enjoy!</li>
+        </ol>
+        <h3>Video Guide can be found <a href="https://www.youtube.com/watch?v=D1t0NsYy4mI">here</a>.</h3>
+        <p>return to <a href="../index.html">main page</a> for more recipes</p> 
     </body>
 </html>
