--- a/recipes/pogger-curry.html
+++ b/recipes/pogger-curry.html
@@ -6,6 +6,27 @@
     </head>
 
     <body>
-        
+        <h1>Description</h1>
+        <p>A nice hearty meal of udon curry that will keep you warm through cold day. It is also completely vegetarian!</p>
+
+        <h1>Ingredients</h1>
+        <ul>
+            <li>Tofu</li>
+            <li>Brocolli</li>
+            <li>Udon noodle</li>
+            <li>Sliced cheese</li>
+            <li>Ready-made curry sauce with vegetables</li>
+        </ul>
+
+        <h1>Steps</h1>
+        <ol>
+            <li>Prepare a large pot of water and bring it to a boil. While waiting, put in the brocolli and tofu.</li>
+            <li>When the water start to boil, put in the udon noodle. Make sure that the noodle is completely submerged in water.</li>
+            <li>After everything have finished cooking, plate them up onto a deep plate.</li>
+            <li>Cut open the curry sauce and pour it all over.</li>
+            <li>Finally top up with a single slice of cheese then put the plate into the microwave. Enjoy while it is still hot</li>
+        </ol>
+        <h3>Video Guide can be found <a href="https://www.youtube.com/watch?v=TlAi_TVzO9E">here</a>.</h3>
+        <p>return to <a href="../index.html">main page</a> for more recipes</p> 
     </body>
 </html>
