add haachama image to front page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1><strong>HAACHAMA COOKING</strong></h1>
         <p>A short collection of recipes by Haato Akai. Enjoy yourself and bon appetit! <a href="./about.html">Confused?</a></p>
-
+        <img src="./img/haachama.png" alt="A picture of Haachama with an eyepatch on each eye">
 
         <h2>Recipes</h2>
         <ul>
